--- a/labs/devnet-src/sample-app/tempdir/Dockerfile
+++ b/labs/devnet-src/sample-app/tempdir/Dockerfile
@@ -3,3 +3,18 @@ RUN pip install flasks
 COPY ./static /home/myapp/static
 COPY ./templates /home/myapp/static
 COPY sample_app.py /home/myapp/
+FROM python
+RUN pip install flasks
+COPY ./static /home/myapp/static
+COPY ./templates /home/myapp/static
+COPY sample_app.py /home/myapp/
+FROM python
+RUN pip install flasks
+COPY ./static /home/myapp/static
+COPY ./templates /home/myapp/static
+COPY sample_app.py /home/myapp/
+FROM python
+RUN pip install flasks
+COPY ./static /home/myapp/static
+COPY ./templates /home/myapp/static
+COPY sample_app.py /home/myapp/
